<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="30dp" >

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="vertical">

                <ImageView android:layout_width="80dp" android:layout_height="80dp"
                           android:scaleType="centerInside"
                           android:cropToPadding="true"
                           android:background="@android:color/darker_gray"/>

                <ImageButton android:layout_width="match_parent" android:layout_height="wrap_content"
                             android:id="@+id/crime_camera"
                             android:src="@android:drawable/ic_menu_camera"/>
            </LinearLayout>
            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:orientation="vertical">

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          style="?android:listSeparatorTextViewStyle"
                          android:text="@string/crime_title_label"/>

                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/crime_title"
                          android:hint="@string/crime_title_hint"/>
            </LinearLayout>

        </LinearLayout>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
          style="?android:listSeparatorTextViewStyle"
          android:text="@string/crime_details_label"/>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/crime_date"/>

        <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
          android:id="@+id/crime_solved"
          android:text="@string/crime_solved_label"/>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/crime_suspect" android:text="@string/crime_suspect_text"/>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/crime_report" android:text="@string/crime_report_text"/>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/call_suspect" android:text="@string/call_suspect_text"/>

    </LinearLayout>
</FrameLayout>